@@ -51,6 +51,7 @@
         // User management methods
         $createUser: this.createUser.bind(this),
         $changePassword: this.changePassword.bind(this),
+        $changeEmail: this.changeEmail.bind(this),
         $removeUser: this.removeUser.bind(this),
         $resetPassword: this.resetPassword.bind(this),
         $sendPasswordResetEmail: this.sendPasswordResetEmail.bind(this)
@@ -303,7 +304,7 @@
      * Changes the password for an email/password user.
      *
      * @param {Object|string} emailOrCredentials The email of the user whose password is to change
-     * or an objet containing the email, old password, and new password of the user whose password
+     * or an object containing the email, old password, and new password of the user whose password
      * is to change.
      * @param {string} [oldPassword] The current password for the user.
      * @param {string} [newPassword] The new password for the user.
@@ -325,6 +326,21 @@
       }
 
       this._ref.changePassword(credentials, this._utils.makeNodeResolver(deferred));
+
+      return deferred.promise;
+    },
+
+    /**
+     * Changes the email for an email/password user.
+     *
+     * @param {Object} credentials An object containing the old email, new email, and password of
+     * the user whose email is to change.
+     * @return {Promise<>} An empty promise fulfilled once the email change is complete.
+     */
+    changeEmail: function(credentials) {
+      var deferred = this._q.defer();
+
+      this._ref.changeEmail(credentials, this._utils.makeNodeResolver(deferred));
 
       return deferred.promise;
     },
